--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>1-expanding-cards</title>
   </head>
   <body>
-    <h1>Expanding Cards</h1>
-    <p>Click an image to expand it</p>
+    <h1>Click an image to expand</h1>
     <div class="container">
       <div
         class="card active"
