--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>1-expanding-cards</title>
   </head>
   <body>
+    <nav>
+      <a
+        href="https://yswnqc.github.io/50_frontend_projects-6_scroll_animation/"
+        class="prev-proj"
+        >Prev</a
+      >
+      <a
+        href="https://yswnqc.github.io/50_frontend_projects-2_progress_steps/"
+        class="next-proj"
+        >Next</a
+      >
+    </nav>
     <h1>Click an image to expand</h1>
     <div class="container">
       <div
